aula-05/rds.tf
resource "aws_db_subnet_group" "postgres" {
  name = "technova-rds-subnet-group"
  subnet_ids = [
    aws_subnet.private_a.id,
    aws_subnet.private_b.id
  ]

  tags = {
    Name    = "technova-rds-subnet-group"
    Project = "TechNova"
    Aula    = "05"
  }
}

resource "aws_db_instance" "postgres" {
  identifier = "technova-postgres"

  engine         = "postgres"
  engine_version = "15"

  instance_class      = "db.t3.micro"
  allocated_storage   = 20
  storage_type        = "gp2"
  storage_encrypted   = true
  multi_az            = false
  publicly_accessible = false
  skip_final_snapshot = true

  db_name  = var.db_name
  username = var.db_username
  password = var.db_password

  db_subnet_group_name   = aws_db_subnet_group.postgres.name
  vpc_security_group_ids = [aws_security_group.rds.id]

  tags = {
    Name    = "technova-postgres"
    Project = "TechNova"
    Aula    = "05"
  }
}
